--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: aliceblue;
+    background-color: goldenrod;
   }
 
   .counter_conatiner {
@@ -27,17 +27,43 @@ body {
     margin-top: 1rem;
   }
   span {
-    font-size: 3rem;
-    background-color: #00bb00;
+    font-size: 2rem;
+    font-weight: 300;
+    background-color: floralwhite;
     padding: 2px 12px;
     margin-left: 16px;
     margin-right: 16px;
     border-radius: 4px;
-    color: #fff;
+    color: black;
+  }
+
+  .separator,.time {
+    font-size: 5rem;
+    color: black;
+    background-color: aqua;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 2px 4px;
+    font-weight: 600;
+  }
+  .clock {
+    background-color: blueviolet;
   }
   button {
-    font-size: 3rem;
+    font-size: 1rem;
     cursor: pointer;
-    background-color: transparent;
+    
     border: 0px;
+  }
+  .card-title {
+    font-size: 2rem;
+    color: brown;
+  }
+  .count {
+    font-size: 1.5rem;
+  }
+  h1 {
+    margin-bottom: 3rem;
+   font-weight: 400;
+   font-size: 3rem;
   }
